#375 - Mindmap-The collapse icon in both left and right reference bar is not proper .Fixed

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -53,10 +53,14 @@ p,a,img,text,span,.noselect{-webkit-touch-callout:none;-webkit-user-select:none;
 .ct-expand{position:absolute;cursor:pointer;overflow:hidden;background-color:rgba(255,255,255,.7)}
 .ct-expand::after{position:absolute;content:'';top:7.5px;border:5px solid transparent}
 #ct-lSide{left:0}
-#ct-lSide .ct-expand::after{left:1px;border-left-color:#333}
+/*#ct-lSide .ct-expand::after{left:1px;border-left-color:#333}*/
+#ct-lSide .ct-expand::after{ left: -4px; border-right-color: #333;}
+.ct-expand.collapsed:after {left: 1px !important; border-left-color:#333 !important;} /*toggle Arrow Icons for left section*/
+.ct-expand.expand:after {left: -4px !important; border-right-color:#333 !important;} /*toggle Arrow Icons for right section*/
 #ct-lSide .ct-expand.ct-rev::after{left:-4px;border-right-color:#333;border-left-color:transparent}
 #ct-rSide{right:0; position: relative;}
-#ct-rSide .ct-expand::after{left:-4px;border-right-color:#333}
+/*#ct-rSide .ct-expand::after{left:-4px;border-right-color:#333}*/
+#ct-rSide .ct-expand::after{left: 1px;border-left-color:#333}
 #ct-rSide .ct-expand.ct-rev::after{left:1px;border-left-color:#333;border-right-color:transparent}
 #ct-main{position:relative;margin:2px;padding:5px;height:calc(100% - 4px);width:calc(100% - 16px)}
 #ct-moduleBox{position:absolute;padding:0 10px;top:30px;z-index:100;height:92px;width:83%;background-color:#e6e7e9;border:1px solid#e6e7e9}
